# llm-evaluation-framework

./: CONTRIBUTING.md  LICENSE  Makefile  NOTEBOOKS_SUMMARY.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  eval-ci.yml  tests.yml
configs/: benchmark_suite_basic.yaml  benchmark_suite_full.yaml  ci_eval_config.yaml  judge_config.yaml  safety_eval_config.yaml
docs/: index.md
docs/01-foundations/: metrics-deep-dive.md  statistical-rigor.md  taxonomy-of-evaluations.md  why-evaluation-matters.md
docs/02-benchmarks/: agentic.md  embeddings-retrieval.md  instruction-following-chat.md  knowledge-reasoning.md  landscape-overview.md  long-context.md  math-and-coding.md  multilingual.md  multimodal.md  rag-benchmarks.md  safety-alignment.md
docs/03-methods/: agentic-evaluation-methods.md  contamination-detection.md  custom-eval-design.md  human-evaluation.md  llm-as-judge.md  pairwise-and-elo.md  rag-evaluation.md
docs/04-tooling/: README.md  braintrust-guide.md  custom-harness.md  deepeval-guide.md  inspect-ai-guide.md  langfuse-guide.md  langsmith-guide.md  lm-eval-harness-guide.md  promptfoo-guide.md  ragas-guide.md  tool-comparison-matrix.md
docs/05-hands-on/: lab-01-basic-benchmark.md  lab-02-llm-as-judge.md  lab-03-rag-eval-pipeline.md  lab-04-safety-red-team.md  lab-05-agentic-eval.md  lab-06-custom-domain-eval.md  lab-07-statistical-analysis.md  lab-08-eval-ci-cd.md  lab-09-model-selection-pareto.md
docs/06-production/: continuous-evaluation.md  eval-driven-model-selection.md  eval-ops-architecture.md  reporting-and-governance.md
docs/07-references/: changelog.md  glossary.md  paper-reading-list.md
notebooks/: lab_01_basic_benchmark.ipynb  lab_02_llm_as_judge.ipynb  lab_03_rag_eval_pipeline.ipynb  lab_04_safety_red_team.ipynb  lab_05_agentic_eval.ipynb  lab_06_custom_domain_eval.ipynb  lab_07_statistical_analysis.ipynb  lab_08_eval_ci_cd.ipynb  lab_09_model_selection_pareto.ipynb
portal/: FILE_SUMMARY.txt  USAGE_GUIDE.md  accuracy.html  benchmarks.html  cost.html  foundations.html  governance.html  index.html  labs.html  methods.html  production.html  references.html  reliability.html  safety.html  speed.html  tooling.html
portal/css/: animations.css  responsive.css  style.css
portal/js/: main.js  search.js  theme-toggle.js
src/llm_eval_framework/: __init__.py
src/llm_eval_framework/contamination/: __init__.py  detector.py
src/llm_eval_framework/harness/: __init__.py  config.py  parallel_runner.py  reporters.py  runner.py
src/llm_eval_framework/judges/: __init__.py  base_judge.py  constitutional_judge.py  multi_judge_panel.py  (+2 more)
tests/: test_contamination.py  test_harness.py  test_judges.py  test_metrics.py  test_stats.py
(+13 files in other folders)
